# dyda-deberta-pair

./: README.md  example.py  pyproject.toml
notebooks/: prediction.ipynb  training.ipynb  upload.ipynb
